--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 99 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 100 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -111,30 +111,31 @@ Unlocked 34/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
+<li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  18351 rev-parse
-  18203 ls-files
-  18149 symbolic-ref
-   1073 status
-    665 pull
-    629 checkout
+  18472 rev-parse
+  18324 ls-files
+  18270 symbolic-ref
+   1077 status
+    668 pull
+    631 checkout
     406 log
-    233 branch
-    232 push
-    201 help
+    236 branch
+    233 push
+    204 help
     195 commit
     175 diff
     167 add
-    154 merge
-    134 show
+    155 merge
+    136 show
     114 reset
      66 tag
      63 fetch
      43 submodule
      41 stash
-     30 clean
+     31 clean
      26 revert
      20 clone
      20 achievements
@@ -158,6 +159,8 @@ Git commands sorted by usage:
       3 blame
       2 web--browse
       1 Tue
+      1 reflog
+      1 merge-base
       1 grep
       1 diff-index
 </pre>
@@ -187,6 +190,5 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Thug</div><div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
-<li><div class="title">Weaver</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul></div>
 </body></html>
