--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 118 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 119 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -103,6 +103,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Banker (Level 8)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Master Banker (Level 9)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Blacksmith (Level 7)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Collector (Level 7)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Master Historian (Level 10)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -133,31 +134,31 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  41651 rev-parse
-  41315 symbolic-ref
-  40723 ls-files
-   2760 status
-   1494 checkout
-   1483 pull
-   1095 log
-    600 push
-    530 diff
-    530 branch
-    521 help
-    471 commit
-    416 add
-    349 merge
-    250 show
-    239 reset
-    184 --no-pager
-    155 fetch
-    147 tag
-     62 whatchanged
-     62 stash
+  43484 rev-parse
+  43146 symbolic-ref
+  42383 ls-files
+   2890 status
+   1549 checkout
+   1518 pull
+   1113 log
+    631 push
+    548 diff
+    541 help
+    537 branch
+    485 commit
+    430 add
+    372 merge
+    255 show
+    240 reset
+    200 --no-pager
+    165 fetch
+    153 tag
+     75 whatchanged
+     70 stash
      57 submodule
-     49 revert
+     52 revert
+     39 clone
      37 clean
-     35 clone
      24 remote
      20 achievements
      18 rebase
@@ -165,11 +166,11 @@ Git commands sorted by usage:
      11 mv
      11 config
      10 init
+      8 rm
       8 instaweb
-      7 rm
+      6 Wed
       6 format-patch
       6 for-each-ref
-      5 Wed
       5 --version
       5 gc
       4 ls-remote
