--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 119 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 120 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -101,6 +101,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Banker (Level 8)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Banker (Level 9)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
@@ -134,45 +135,46 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  43484 rev-parse
-  43146 symbolic-ref
-  42383 ls-files
-   2890 status
-   1549 checkout
-   1518 pull
-   1113 log
-    631 push
-    548 diff
-    541 help
-    537 branch
-    485 commit
-    430 add
-    372 merge
-    255 show
-    240 reset
-    200 --no-pager
-    165 fetch
-    153 tag
-     75 whatchanged
-     70 stash
+  45215 rev-parse
+  44880 symbolic-ref
+  44011 ls-files
+   3046 status
+   1589 checkout
+   1548 pull
+   1136 log
+    651 push
+    565 diff
+    557 help
+    548 branch
+    505 commit
+    450 add
+    383 merge
+    261 show
+    250 reset
+    214 --no-pager
+    167 fetch
+    160 tag
+     79 whatchanged
+     75 stash
      57 submodule
      52 revert
-     39 clone
-     37 clean
-     24 remote
+     45 clean
+     44 clone
+     25 remote
      20 achievements
      18 rebase
-     15 cherry-pick
+     16 cherry-pick
      11 mv
      11 config
+     10 rm
      10 init
-      8 rm
       8 instaweb
       6 Wed
       6 format-patch
       6 for-each-ref
       5 --version
       5 gc
+      5 describe
       4 ls-remote
       4 apply
       3 Thu
